--- a/app/src/components/Button/Button.css
+++ b/app/src/components/Button/Button.css
@@ -14,3 +14,12 @@
     min-width: 150px;
     padding: 10px;
   }
+
+.tableContainer {
+    display: flex;
+    background-color: #282c34;
+    color: white;
+    min-width: 150px;
+    height: fit-content;
+    padding: 10px;
+}
