--- a/app/src/components/Button/Button.css
+++ b/app/src/components/Button/Button.css
@@ -20,7 +20,8 @@
     background-color: #282c34;
     color: white;
     min-width: 150px;
-    height: fit-content;
+    max-height: 100px;
+    overflow-y: auto;
     padding: 10px;
 }
 .mapContainer {
