--- a/app/src/components/Button/Button.css
+++ b/app/src/components/Button/Button.css
@@ -9,26 +9,32 @@
   
   .buttonContainer {
     display: flex;
+    border-radius: 10px;
     background-color: #282c34;
     color: white;
     min-width: 150px;
     padding: 10px;
+    margin-bottom: 20px;
   }
 
 .tableContainer {
     display: flex;
+    border-radius: 10px;
     background-color: #282c34;
     color: white;
     min-width: 150px;
     max-height: 100px;
     overflow-y: auto;
     padding: 10px;
+    margin-bottom: 20px;
 }
 .mapContainer {
     display: flex;
+    border-radius: 10px;
     background-color: #282c34;
     color: white;
     min-width: 150px;
     height: fit-content;
     padding: 10px;
+    margin-bottom: 20px;
 }
