--- a/app/src/components/NearbyTable/NearbyTable.css
+++ b/app/src/components/NearbyTable/NearbyTable.css
@@ -20,21 +20,28 @@ h1{
     border: 1px solid rgba(255,255,255,0.3);
   }
   th{
-    padding: 20px 15px;
-    text-align: left;
+    padding: 15px 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 14px;
     color: #fff;
     text-transform: uppercase;
+    border-bottom: solid 1px rgba(255,255,255,0.1);
+    border-right: solid 1px rgba(255,255,255,0.1);
+    border-left: solid 1px rgba(255,255,255,0.1);
   }
   td{
     padding: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: left;
     vertical-align:middle;
     font-weight: 300;
-    font-size: 12px;
+    font-size: 14px;
     color: #fff;
     border-bottom: solid 1px rgba(255,255,255,0.1);
+    border-right: solid 1px rgba(255,255,255,0.1);
+    border-left: solid 1px rgba(255,255,255,0.1);
   }
   
   
