--- a/app/src/components/NearbyTable/NearbyTable.css
+++ b/app/src/components/NearbyTable/NearbyTable.css
@@ -24,12 +24,21 @@ h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 12px;
     color: #fff;
     text-transform: uppercase;
     border-bottom: solid 1px rgba(255,255,255,0.1);
     border-right: solid 1px rgba(255,255,255,0.1);
     border-left: solid 1px rgba(255,255,255,0.1);
+  }
+  .table-row {
+    box-shadow: none;
+    transition: background-color 0.2s ease-out, box-shadow 0.2s ease-out;
+    cursor: pointer;
+  }
+  .table-row-hover:hover {
+    background-color: rgb(77, 71, 71);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
   td{
     padding: 15px;
