--- a/app/src/components/Button/Button.css
+++ b/app/src/components/Button/Button.css
@@ -12,21 +12,37 @@
     border-radius: 10px;
     background-color: #282c34;
     color: white;
-    min-width: 150px;
+    min-width: 200px;
     padding: 10px;
     margin-bottom: 20px;
   }
-
+  .speedTestButton {
+    display: flex;
+    border-radius: 10px;
+    background-color: #282c34;
+    color: white;
+    max-width: 150px;
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+.tableContainer::-webkit-scrollbar {
+    display: none;
+}
 .tableContainer {
     display: flex;
     border-radius: 10px;
     background-color: #282c34;
     color: white;
     min-width: 150px;
-    max-height: 100px;
+    max-height: auto;
     overflow-y: auto;
     padding: 10px;
     margin-bottom: 20px;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    overflow-y: auto; /* Keeps scrolling functionality */
 }
 .mapContainer {
     display: flex;
