--- a/app/src/components/NearbyTable/NearbyTable.css
+++ b/app/src/components/NearbyTable/NearbyTable.css
@@ -1,93 +1,57 @@
-h1{
-    font-size: 30px;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 300;
-    text-align: center;
-    margin-bottom: 15px;
-  }
-  table{
-    width:100%;
-    table-layout: fixed;
-  }
-  .tbl-header{
-    background-color: rgba(255,255,255,0.3);
-   }
-  .tbl-content{
-    height:300px;
-    overflow-x:auto;
-    margin-top: 0px;
-    border: 1px solid rgba(255,255,255,0.3);
-  }
-  th{
-    padding: 15px 15px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-    font-weight: 500;
-    font-size: 12px;
-    color: #fff;
-    text-transform: uppercase;
-    border-bottom: solid 1px rgba(255,255,255,0.1);
-    border-right: solid 1px rgba(255,255,255,0.1);
-    border-left: solid 1px rgba(255,255,255,0.1);
-  }
-  .table-row {
-    box-shadow: none;
-    transition: background-color 0.2s ease-out, box-shadow 0.2s ease-out;
-    cursor: pointer;
-  }
-  .table-row-hover:hover {
-    background-color: rgb(77, 71, 71);
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  }
-  td{
-    padding: 15px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: left;
-    vertical-align:middle;
-    font-weight: 300;
-    font-size: 14px;
-    color: #fff;
-    border-bottom: solid 1px rgba(255,255,255,0.1);
-    border-right: solid 1px rgba(255,255,255,0.1);
-    border-left: solid 1px rgba(255,255,255,0.1);
-  }
-  
-  
-  /* demo styles */
-  
-  @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-  body{
-    background: -webkit-linear-gradient(left, #25c481, #25b7c4);
-    background: linear-gradient(to right, #25c481, #25b7c4);
-    font-family: 'Roboto', sans-serif;
-  }
-  section{
-    margin: 50px;
-  }
-  
-  
-  /* follow me template */
-  .made-with-love {
-    margin-top: 40px;
-    padding: 10px;
-    clear: left;
-    text-align: center;
-    font-size: 10px;
-    font-family: arial;
-    color: #fff;
-  }
-  .made-with-love i {
-    font-style: normal;
-    color: #F50057;
-    font-size: 14px;
-    position: relative;
-    top: 2px;
-  }
-  .made-with-love a {
-    color: #fff;
-    text-decoration: none;
-  }
-  .made-with-love a:hover {
-    text-decoration: underline;
-  }
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
+
+body {
+  background: linear-gradient(to right, #25c481, #25b7c4);
+  font-family: 'Roboto', sans-serif;
+}
+
+table {
+  width: 100%;
+  min-height: 500px;
+  table-layout: fixed;
+  position: relative;
+}
+
+thead {
+  display: table-header-group;
+  position: sticky;
+  top: 0;
+  background: inherit;
+}
+
+th {
+  padding: 7px 7px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  font-weight: 500;
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase;
+  border-bottom: solid 1px rgba(255,255,255,0.1);
+  border-right: solid 1px rgba(255,255,255,0.1);
+  border-left: solid 1px rgba(255,255,255,0.1);
+}
+
+.table-row {
+  box-shadow: none;
+  transition: background-color 0.2s ease-out, box-shadow 0.2s ease-out;
+  cursor: pointer;
+}
+
+.table-row-hover:hover {
+  background-color: rgb(77, 71, 71);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+td {
+  padding: 7px; /* reduced padding */
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: left;
+  vertical-align: middle;
+  font-weight: 300;
+  font-size: 14px;
+  color: #fff;
+  border-bottom: solid 1px rgba(255,255,255,0.1);
+  border-right: solid 1px rgba(255,255,255,0.1);
+  border-left: solid 1px rgba(255,255,255,0.1);
+}
