--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,5 +1,23 @@
 body {
-    height: 600px;
+    display: flex;
+    justify-content: center;
+    height: auto;
     width: 600px;
     text-align: center;
+}
+
+body::-webkit-scrollbar {
+    width: 10px; /* Width of the scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+background: #f1f1f1; /* Background color of the track */
+}
+
+body::-webkit-scrollbar-thumb {
+background: #888; /* Background color of the thumb (scrolling part) */
+}
+
+body::-webkit-scrollbar-thumb:hover {
+background: #555; /* Background color of the thumb on hover */
 }
